--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body class="body_backgorund" onload="new_image()">
 	<center>
 		<br><br>
+    <canvas id="myCanvas" width="800" height="800">
 		<!--- Create canvas --->
 		<br>
 		<!--- Create Bootstrap button --->
+    <button class="btn btn-warning">Dear mom</button>
 	</center>
 	<audio id="myAudio" src="bdayaudio.mp3"></audio>
 	<script src="main.js"></script>
