--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 	<center>
 		<br><br>
     <canvas id="myCanvas" width="800" height="800">
-		<!--- Create canvas --->
+	</canvas>
 		<br>
-		<!--- Create Bootstrap button --->
     <button class="btn btn-warning">Dear mom</button>
 	</center>
 	<audio id="myAudio" src="bdayaudio.mp3"></audio>
